Fix bug 135833 (view source not working right when it needs a repost). r=rpotts, sr=darin.