netwerk/protocol/viewsource/src/nsViewSourceChannel.h
@@ -86,6 +86,7 @@ protected:
     nsCOMPtr<nsIUploadChannel>  mUploadChannel;
     nsCOMPtr<nsIStreamListener> mListener;
     nsCString                   mContentType;
+    PRBool                      mIsDocument; // keeps track of the LOAD_DOCUMENT_URI flag
 };
 
 #endif /* nsViewSourceChannel_h___ */
